--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,4 +2,5 @@ gsettings_SCHEMAS = so.bob131.valhalla.gschema.xml
 @GSETTINGS_RULES@
 
 all:
+	glib-compile-resources so.bob131.valhalla.gresources.xml --target=so.bob131.valhalla.gresources.c --generate-source
 	glib-compile-schemas .
