--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,18 @@
-bin_PROGRAMS = valhalla
+bin_PROGRAMS = valhalla gvalhalla
 
-valhalla_SOURCES = \
+base_sources = \
+	base.vala \
 	utils.vala \
-	utils-cli.vala \
 	utils-config.vala \
 	utils-c.c \
 	utils-files.vala \
 	utils-screenshot.vala \
-	main.vala
+	utils-ui.vala
+
+
+valhalla_SOURCES = \
+	$(base_sources) \
+	valhalla.vala
 
 valhalla_CFLAGS = \
 	$(valhalla_U_CFLAGS)
@@ -22,7 +27,10 @@ valhalla_VALAFLAGS = \
 	--pkg sqlite3 \
 	--pkg gdk-3.0 \
 	--pkg gtk+-3.0 \
-	--target-glib $(GLIB_REQUIRED)
+	--pkg gmodule-2.0 \
+	--thread \
+	--target-glib $(GLIB_REQUIRED) \
+	--gresources $(top_srcdir)/data/so.bob131.valhalla.gresources.xml
 
 valhalla_LDADD = \
 	-lreadline -ltermcap \
@@ -31,3 +39,18 @@ valhalla_LDADD = \
 	-lmagic \
 	-lsqlite3 \
 	$(valhalla_U_LIBS)
+
+
+gvalhalla_SOURCES = \
+	$(base_sources) \
+	$(top_srcdir)/data/so.bob131.valhalla.gresources.c \
+	gvalhalla.vala
+
+gvalhalla_CFLAGS = \
+	$(valhalla_U_CFLAGS)
+
+gvalhalla_VALAFLAGS = \
+	$(valhalla_VALAFLAGS)
+
+gvalhalla_LDADD = \
+	$(valhalla_LDADD)
