Valhalla NG: Now with shiny things!

--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,24 @@ gschemas.compiled
 /*~
 .*.sw*
 /.dirstamp
-/src/*.stamp*
-/src/gvalhalla
+*.stamp*
+*.la
+*.lo
+Makefile
+Makefile.in
+tags
+.libs
+/src/valhalla
+/src/valhalla-screenshot
+/src/valhalla.h
+/vapi/valhalla.vapi
 /GPATH
 /GRTAGS
 /GSYMS
 /GTAGS
 /ID
-/Makefile
-/Makefile.in
 /TAGS
+/libltdl
 /aclocal.m4
 /autom4te.cache
 /autoscan.log
@@ -44,13 +52,12 @@ gschemas.compiled
 /configure
 /configure.lineno
 /configure.scan
-/data/Makefile.in
 /libtool
 /so_locations
-/src/Makefile.in
 /stamp-h1
 /tags
 /m4
-/src/*.c
-!/src/utils-c.c
-/data/*.c
+*.c
+/data/.dirstamp
+/data/*.service
+/data/*.desktop
