--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_INIT([valhalla],[0.0])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIRS([m4])
 
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE([foreign subdir-objects])
 
 AM_PROG_VALAC([0.24])
 AM_PROG_CC_C_O
@@ -12,9 +12,7 @@ dnl ###########################################################################
 dnl Dependencies
 dnl ###########################################################################
 
-AX_LIB_READLINE
-
-GLIB_REQUIRED=2.38.0
+GLIB_REQUIRED=2.40.0
 GOBJ_REQUIRED=2.0.0
 GIO_REQUIRED=2.0.0
 
@@ -22,9 +20,11 @@ PKG_CHECK_MODULES(valhalla_U, [
   glib-2.0 >= $GLIB_REQUIRED
   gobject-2.0 >= $GOBJ_REQUIRED
   gio-2.0 >= $GIO_REQUIRED
-  gdk-3.0
+  gmodule-2.0
   gtk+-3.0
+  gee-0.8
   sqlite3
+  libnotify
   zlib
   libsoup-2.4
 ])
@@ -35,10 +35,12 @@ dnl ###########################################################################
 dnl Files to generate
 dnl ###########################################################################
 
+LT_INIT([dlopen])
+
 AC_CONFIG_FILES([
 Makefile
 src/Makefile
+src/modules/Makefile
 data/Makefile
 ])
-GLIB_GSETTINGS
 AC_OUTPUT
