Source tree cleanup
* Move GTK widgets out of src/gtk-widgets.vala and into their own folder
* Shuffle around module-related sources to ease tab-completion
* Some automake spring cleaning

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 
 AM_INIT_AUTOMAKE([foreign subdir-objects])
+AM_SILENT_RULES([yes])
 
 AM_PROG_VALAC([0.24])
 AM_PROG_CC_C_O
@@ -15,6 +16,7 @@ dnl ###########################################################################
 GLIB_REQUIRED=2.40.0
 GOBJ_REQUIRED=2.0.0
 GIO_REQUIRED=2.0.0
+AC_SUBST([GLIB_REQUIRED])
 
 PKG_CHECK_MODULES(valhalla_U, [
   glib-2.0 >= $GLIB_REQUIRED
@@ -30,15 +32,18 @@ PKG_CHECK_MODULES(valhalla_U, [
   libnautilus-extension
 ])
 
-AC_SUBST([GLIB_REQUIRED])
+AC_SUBST([valhalla_U_VALAFLAGS], [--target-glib=$GLIB_REQUIRED])
+
+AC_PATH_PROG(GLIB_COMPILE_RESOURCES, glib-compile-resources)
+
 NAUTILUS_EXTENSION_DIR=`$PKG_CONFIG --variable=extensiondir libnautilus-extension`
 AC_SUBST(NAUTILUS_EXTENSION_DIR)
 
 LT_INIT([dlopen])
 
 LIBGD_INIT([
-	notification
-	vapi
+  notification
+  vapi
 ])
 
 dnl ###########################################################################
