--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,103 +1,1 @@
-lib_LTLIBRARIES = libvalhalla.la
-bin_PROGRAMS = valhalla valhalla-screenshot
-
-valhallavapidir = $(datadir)/vala/vapi
-valhallavapi_DATA = $(top_srcdir)/vapi/valhalla.vapi
-valhallaheaderdir = $(includedir)
-valhallaheader_DATA = valhalla.h
-
-
-libvalhalla_la_SOURCES = \
-	libvalhalla.vala
-
-libvalhalla_la_VALAFLAGS = \
-	--pkg gio-2.0 \
-	--pkg gee-0.8 \
-	--pkg gtk+-3.0 \
-	--library valhalla \
-	-H valhalla.h \
-	--vapi $(top_srcdir)/vapi/valhalla.vapi \
-	--enable-experimental-non-null \
-	$(valhalla_U_VALAFLAGS)
-
-libvalhalla_la_CFLAGS = \
-	-DVALHALLA_MODULES_MODULEDIR=\"$(pkglibdir)\" \
-	$(valhalla_U_CFLAGS)
-
-libvalhalla_la_LIBADD = \
-	$(valhalla_U_LIBS)
-
-
-gd.vapi:
-	$(AM_V_GEN) cp $(top_srcdir)/libgd/gd-1.0.vapi $(top_srcdir)/vapi/gd-1.0.vapi
-
-resource_files = $(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies --sourcedir=$(srcdir) gresources.xml)
-gresources.c: gresources.xml $(resource_files)
-	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(srcdir) --generate-source $<
-
-BUILT_SOURCES = gd.vapi gresources.c
-
-valhalla_SOURCES = \
-	gresources.c \
-	gtk/files.vala \
-	gtk/preferences.vala \
-	gtk/transfers.vala \
-	gtk/window.vala \
-	config.vala \
-	database.vala \
-	loader.vala \
-	screenshot.vala \
-	thumbnailer.vala \
-	valhalla.vala
-
-valhalla_VALAFLAGS = \
-	--pkg gio-2.0 \
-	--pkg gee-0.8 \
-	--pkg gtk+-3.0 \
-	--pkg gmodule-2.0 \
-	--pkg zlib \
-	--pkg libnotify \
-	--pkg posix \
-	--pkg sqlite3 \
-	--pkg libsoup-2.4 \
-	--pkg gd-1.0 \
-	--pkg valhalla \
-	--vapidir $(top_srcdir)/vapi \
-	--gresources gresources.xml \
-	$(valhalla_U_VALAFLAGS)
-
-valhalla_CFLAGS = \
-	-DVALHALLA_MODULES_MODULEDIR=\"$(pkglibdir)\" \
-	-I $(top_srcdir)/libgd \
-	$(valhalla_U_CFLAGS)
-
-valhalla_LDADD = \
-	-lm \
-	$(top_builddir)/libgd/libgd.la \
-	$(libvalhalla_la_OBJECTS) \
-	$(valhalla_U_LIBS)
-
-
-valhalla_screenshot_SOURCES = valhalla-screenshot.vala
-valhalla_screenshot_VALAFLAGS = --pkg gio-2.0
-valhalla_screenshot_CFLAGS = $(valhalla_CFLAGS)
-valhalla_screenshot_LDADD = $(valhalla_U_LIBS)
-
-
-nautilus_extensiondir = $(NAUTILUS_EXTENSION_DIR)
-nautilus_extension_LTLIBRARIES = libnautilus-valhalla.la
-
-libnautilus_valhalla_la_SOURCES = nautilus-extension.c
-libnautilus_valhalla_la_VALAFLAGS = \
-	--pkg gio-2.0 \
-	--pkg gtk+-3.0 \
-	--pkg nautilus \
-	--vapidir $(top_srcdir)/vapi \
-	$(valhalla_U_VALAFLAGS)
-libnautilus_valhalla_la_CFLAGS = $(valhalla_U_CFLAGS)
-libnautilus_valhalla_la_LDFLAGS = -module -avoid-version
-libnautilus_valhalla_la_LIBADD = $(valhalla_U_LIBS)
-
-nautilus-extension.c:
-	$(AM_V_VALAC) $(VALAC) $(libnautilus_valhalla_la_VALAFLAGS) -C nautilus-extension.vala; \
-	$(SED) -i "s/(GType\*\* types/(const GType\*\* types/" nautilus-extension.c
+SUBDIRS=libvalhalla modules valhalla
