Fix up `make dist`
modules: clean built sources on dist

libvalhalla: clean built sources on dist

valhalla: clean built sources on dist

valhalla: package gresources.xml on dist

vapi: package shipped VAPIs on dist

Clean built VAPIs on dist

valhalla: package UI definitions on dist

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,11 @@
 ACLOCAL_AMFLAGS=-I m4
 SUBDIRS=libgd data src src/modules
+
+EXTRA_DIST = \
+	vapi/gee-0.8.vapi \
+	vapi/libsoup-2.4.vapi \
+	vapi/nautilus.vapi \
+	vapi/sqlite3.vapi
+
+dist-hook:
+	cd $(distdir)/vapi; rm -f valhalla.vapi
