--- a/src/libvalhalla/Makefile.am
+++ b/src/libvalhalla/Makefile.am
@@ -6,9 +6,7 @@ valhallaheaderdir = $(includedir)
 valhallaheader_DATA = valhalla.h
 
 
-libvalhalla_la_SOURCES = \
-	libvalhalla.vala
-
+libvalhalla_la_SOURCES = libvalhalla.vala
 libvalhalla_la_VALAFLAGS = \
 	--pkg gio-2.0 \
 	--pkg gee-0.8 \
@@ -16,15 +14,10 @@ libvalhalla_la_VALAFLAGS = \
 	--library valhalla \
 	-H valhalla.h \
 	--vapi $(top_srcdir)/vapi/valhalla.vapi \
-	--enable-experimental-non-null \
 	$(valhalla_U_VALAFLAGS)
+libvalhalla_la_CFLAGS = $(valhalla_U_CFLAGS)
+libvalhalla_la_LIBADD = $(valhalla_U_LIBS)
 
-libvalhalla_la_CFLAGS = \
-	-DVALHALLA_MODULES_MODULEDIR=\"$(pkglibdir)\" \
-	$(valhalla_U_CFLAGS)
-
-libvalhalla_la_LIBADD = \
-	$(valhalla_U_LIBS)
 
 CLEANFILES = \
 	$(libvalhalla_la_SOURCES:%.vala=%.c) \
