Overhaul module interface
This probably breaks everything.

--- a/src/libvalhalla/Makefile.am
+++ b/src/libvalhalla/Makefile.am
@@ -9,6 +9,7 @@ valhallaheader_DATA = valhalla.h
 libvalhalla_la_SOURCES = libvalhalla.vala
 libvalhalla_la_VALAFLAGS = \
 	--pkg gio-2.0 \
+	--pkg gee-0.8 \
 	--library valhalla \
 	-H valhalla.h \
 	--vapi $(top_srcdir)/vapi/valhalla.vapi \
