Use libgnome-desktop's thumbnail generation
Presently, thumbnail generation in valhalla is done by an implmentation
of the XDG thumbnailer spec. This patch uses libgnome-desktop instead;
this means we get to strip out a bunch of code and get extra goodies for
free.

--- a/src/valhalla/Makefile.am
+++ b/src/valhalla/Makefile.am
@@ -33,12 +33,14 @@ valhalla_VALAFLAGS = \
 	--pkg sqlite3 \
 	--pkg libsoup-2.4 \
 	--pkg gd-1.0 \
+	--pkg gnome-desktop-3 \
 	--pkg valhalla \
 	--gresources gresources.xml \
 	$(valhalla_U_VALAFLAGS)
 
 valhalla_CFLAGS = \
 	-DVALHALLA_MODULE_MODULEDIR=\"$(pkglibdir)\" \
+	-DGNOME_DESKTOP_USE_UNSTABLE_API \
 	-I $(top_srcdir)/libgd -I $(top_srcdir)/src/libvalhalla \
 	$(valhalla_U_CFLAGS)
 
