Quieten build output
Building is very noisy due to the large number of warnings from valac
generated C files. This commit adds -w to the global CFLAGS and adds
--no-print-directory to AM_MAKEFLAGS.

--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,8 @@ AM_SILENT_RULES([yes])
 AM_PROG_VALAC([0.24])
 AM_PROG_CC_C_O
 
+CFLAGS="$CFLAGS -w"
+
 dnl ###########################################################################
 dnl Dependencies
 dnl ###########################################################################
