Use git.mk instead of hand-written .gitignore
This commit adds git.mk to automatically generate .gitignore files. It
also reshuffles some of the automake files to make rebuilding more
convenient.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,3 +11,11 @@ EXTRA_DIST = \
 
 dist-hook:
 	cd $(distdir)/vapi; rm -f valhalla.vapi
+
+MAINTAINERCLEANFILES = \
+	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
+	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
+	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL) \
+	m4/libgd.m4 m4/introspection.m4 m4/pkg.m4
+
+-include git.mk
