--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -4,6 +4,8 @@ desktop_DATA = so.bob131.valhalla.desktop
 dbusservicedir = $(datadir)/dbus-1/services
 dbusservice_DATA = so.bob131.valhalla.service
 
+BUILT_SOURCES = so.bob131.valhalla.service so.bob131.valhalla.desktop
+
 # TODO: Use a real icon rather than the send file placeholder
 so.bob131.valhalla.desktop: Makefile
 	$(AM_V_GEN) (echo '[Desktop Entry]'; \
@@ -17,3 +19,5 @@ so.bob131.valhalla.service: Makefile
 	$(AM_V_GEN) (echo '[D-BUS Service]'; \
 	             echo 'Name=so.bob131.valhalla'; \
 	             echo 'Exec=${bindir}/valhalla --gapplication-service') > $@.tmp && mv $@.tmp $@
+
+-include $(top_srcdir)/git.mk
