--- a/src/libvalhalla/Makefile.am
+++ b/src/libvalhalla/Makefile.am
@@ -1,10 +1,9 @@
 lib_LTLIBRARIES = libvalhalla.la
 
 valhallavapidir = $(datadir)/vala/vapi
-valhallavapi_DATA = $(top_srcdir)/vapi/valhalla.vapi
+valhallavapi_DATA = valhalla.vapi
 valhallaheaderdir = $(includedir)
 valhallaheader_DATA = valhalla.h
-
 
 libvalhalla_la_SOURCES = libvalhalla.vala
 libvalhalla_la_VALAFLAGS = \
@@ -12,15 +11,12 @@ libvalhalla_la_VALAFLAGS = \
 	--pkg gee-0.8 \
 	--library valhalla \
 	-H valhalla.h \
-	--vapi $(top_srcdir)/vapi/valhalla.vapi \
+	--vapi valhalla.vapi \
 	$(valhalla_U_VALAFLAGS)
 libvalhalla_la_CFLAGS = $(valhalla_U_CFLAGS)
 libvalhalla_la_LIBADD = $(valhalla_U_LIBS)
 
-
-CLEANFILES = \
-	$(libvalhalla_la_SOURCES:%.vala=%.c) \
-	*.stamp
-
 dist-hook:
 	cd $(distdir); rm -f $(CLEANFILES)
+
+-include $(top_srcdir)/git.mk
