--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -1,7 +1,8 @@
+libvalhalla = $(top_srcdir)/src/libvalhalla/valhalla.vapi
+
 common_valaflags = \
 	--pkg gio-2.0 \
 	--pkg gee-0.8 \
-	--pkg valhalla \
 	$(valhalla_U_VALAFLAGS)
 
 common_cflags = \
@@ -15,12 +16,10 @@ common_libadd = \
 
 common_ldflags = -module -avoid-version -shared -export-dynamic
 
-
 pkglib_LTLIBRARIES = \
 	fuse.la
 
-
-fuse_la_SOURCES = fuse.vala
+fuse_la_SOURCES = fuse.vala $(libvalhalla)
 fuse_la_VALAFLAGS = \
 	--pkg posix \
 	--pkg gtk+-3.0 \
@@ -29,10 +28,7 @@ fuse_la_CFLAGS = $(common_cflags)
 fuse_la_LIBADD = $(common_libadd)
 fuse_la_LDFLAGS = $(common_ldflags)
 
-
-CLEANFILES = \
-	$(fuse_la_SOURCES:%.vala=%.c) \
-	*.stamp
-
 dist-hook:
 	cd $(distdir); rm -f $(CLEANFILES)
+
+-include $(top_srcdir)/git.mk
